--- a/drift-detection-calibration.Rmd
+++ b/drift-detection-calibration.Rmd
@@ -19,6 +19,7 @@ library(stringr)
 library(CVXR)
 ```
 
+# Basic Setup
 ```{r}
 td_hour <- 60*60
 td_day <- td_hour*24
@@ -45,14 +46,12 @@ reset_flags <- function(pollutant){
     mutate_at(.vars = c('ks', 'gain', 'offset'), .funs = ~.x*0) %>%
     write.csv(file_with_flags, row.names = F)
   
-  print(paste0('Reset', pollutant, 'flags - restarting drift detection at zero'))
+  print(paste('Reset', pollutant, 'flags - restarting drift detection at zero'))
 }
 ```
 
-####################################################
-# Get Proxy Data
-####################################################
 
+# Get Proxy Data
 ```{r}
 get_existing_proxy_data <- function(pollutant){
   
@@ -74,10 +73,10 @@ get_existing_proxy_data <- function(pollutant){
 find_starttime_proxy_request <- function(existing_proxy_data){
   
   ramn_start_time <- format_timestamp('2019-12-01 00:00:00')
-  yesterday <- format_timestamp(Sys.time() - td_day)
-  right_now <- format_timestamp(round(Sys.time(), 'hour'))
+  yesterday <- format_timestamp(with_tz(Sys.time() - td_day, 'UTC'))
+  right_now <- format_timestamp(with_tz(round(Sys.time(), 'hour'), 'UTC'))
   
-  if(nrow(existing_proxy_data) > 0){timestamps_existing <- unique(existing_proxy_data$timestamp)}
+  if(nrow(existing_proxy_data) > 0){timestamps_existing <- unique(existing_proxy_data$timestamp_utc)}
     else{print('No existing data - requesting all starting Dec 2019')
         return(ramn_start_time)}
   
@@ -131,7 +130,7 @@ request_new_proxy_data <- function(request_url){
   request_df <- fromJSON(request_json, simplifyDataFrame = TRUE)
   
   new_proxy_data <- mutate(request_df, 
-                           timestamp = paste0(substr(UTC, 1, 10), ' ', substr(UTC, 12, 16), ':00'), 
+                           timestamp_utc = paste0(substr(UTC, 1, 10), ' ', substr(UTC, 12, 16), ':00'), 
                            RawConcentration = ifelse(RawConcentration == -999, Value, RawConcentration))
   
   return(new_proxy_data)
@@ -176,7 +175,7 @@ request_all_dates_needed <- function(pollutant, request_start_time, existing_pro
 ```{r}
 process_and_write_proxy_data <- function(pollutant, proxy_data){
   
-  proxy_data_no_duplicates <- group_by(proxy_data, proxy_site, timestamp) %>%
+  proxy_data_no_duplicates <- group_by(proxy_data, proxy_site, timestamp_utc) %>%
     slice_sample()
   
   print(paste('Proxy data for', pollutant, 'now current - writing to results/proxy'))
@@ -205,9 +204,8 @@ get_current_proxy_data <- function(pollutant){
 ```
 
 ####################################################
-# Get AQY Data
-####################################################
 
+# Get AQY Data
 ```{r}
 read_aqy_data <- function(){
   
@@ -220,8 +218,11 @@ read_aqy_data <- function(){
       else{aqy_data <- read.csv(files_at_path[1], stringsAsFactors = F)}
   
   aqy_data_utc <- aqy_data %>% 
-    rename('timestamp'='Time') %>%
-    mutate(timestamp = as.character(ymd_hms(timestamp) + 8*60*60))
+    rename('timestamp_original'='Time') %>%
+    mutate(timestamp_utc = ymd_hms(timestamp_original, tz = 'America/Los_Angeles'),
+           timestamp_utc = with_tz(timestamp_utc, tz = 'UTC'),
+           timestamp_utc = as.character(timestamp_utc), .after = 'ID') %>%
+    filter(!is.na(timestamp_utc))
   
   return(aqy_data_utc)
 }
@@ -248,16 +249,16 @@ calibrate_aqy_data <- function(aqy_data, pollutant){
   params_NO2 <- get_current_params('NO2')
   
   calibrated_data_O3 <- inner_join(params_O3, aqy_data, by = 'ID') %>%
-    filter(timestamp >= deployment_datetime & timestamp >= start_date & timestamp <= end_date) %>%
+    filter(timestamp_original >= deployment_datetime & timestamp_utc >= start_date & timestamp_utc <= end_date) %>%
     mutate(O3 = O3.offset + (O3.gain*O3_raw)) %>%
-    dplyr::select(ID, timestamp, TEMP, RH, DP, PM25, PM25_raw, O3, O3_raw, Ox, Ox_raw, NO2, NO2_raw)
+    dplyr::select(ID, timestamp_utc, timestamp_original, TEMP, RH, DP, PM25_raw, O3, O3_raw, Ox_raw, NO2_raw)
   
   calibrated_data <- inner_join(params_NO2, calibrated_data_O3, by = 'ID') %>%
-    mutate(NO2 = NO2.offset + (NO2.gain*Ox_raw) - (NO2.a.value*O3))
+    mutate(NO2 = NO2.offset + (NO2.gain*NO2_raw), .before = 'NO2_raw')
   
-  pollutant <- switch(pollutant, 'OZONE'='O3', 'NO2'='NO2')
+  pollutant_name <- switch(pollutant, 'OZONE'='O3', 'NO2'='NO2')
   
-  new_col_names <- str_replace_all(string = colnames(calibrated_data), pattern = pollutant, replacement = 'pollutant')
+  new_col_names <- str_replace_all(string = colnames(calibrated_data), pattern = pollutant_name, replacement = 'pollutant')
   colnames(calibrated_data) <- new_col_names
   
   return(calibrated_data)
@@ -272,9 +273,9 @@ filter_and_join_data <- function(aqy_data, proxy_data, start_time, td_add_to_sta
   
   print(paste('Detecting drift for data between', start_time, 'and', end_time))
   
-  joined_data <- inner_join(aqy_data, proxy_data, by = c('timestamp', 'proxy_site')) %>%
-    filter(ID %in% c('AQY BB-633', 'AQY BB-642') & timestamp < '2021') %>%
-    filter(timestamp < end_time) %>%
+  joined_data <- inner_join(aqy_data, proxy_data, by = c('timestamp_utc', 'proxy_site')) %>%
+    filter(ID %in% c('AQY BB-633', 'AQY BB-642') & timestamp_utc < '2021') %>%
+    filter(timestamp_utc < end_time) %>%
     na.omit()
   
   return(joined_data)
@@ -283,16 +284,16 @@ filter_and_join_data <- function(aqy_data, proxy_data, start_time, td_add_to_sta
 ```
 
 #######################################
-# Detect Drift
-#######################################
 
+
+# Detect Drift
 ```{r}
 detect_drift <- function(joined_data_72hr){
           
   drift_tests <- group_by(joined_data_72hr, ID) %>%
-    summarize(manual_gain = sqrt(var(proxy_rand)/var(O3)),
-              manual_offset = mean(proxy_rand) - manual_gain*mean(O3),
-              ks_p = suppressWarnings(ks.test(proxy_rand, O3, exact = F))$p.value, 
+    summarize(manual_gain = sqrt(var(proxy_rand)/var(pollutant)),
+              manual_offset = mean(proxy_rand) - manual_gain*mean(pollutant),
+              ks_p = suppressWarnings(ks.test(proxy_rand, pollutant, exact = F))$p.value, 
               .groups = 'drop_last')
   
   drift_flags <- mutate(drift_tests,
@@ -325,9 +326,9 @@ sum_old_and_new_flags <- function(pollutant, new_flags){
   
   flag_path <- paste0('results/running_flags/running_flags_', pollutant, '.csv')
   existing_flags <- read.csv(flag_path, stringsAsFactors = F)
-  
+
   joined_flags <- full_join(existing_flags, new_flags, by = 'ID')
-  
+
   cols_to_rmv_na <- colnames(joined_flags)[2:ncol(joined_flags)]
   
   sum_if_flagged <- function(old, new){ifelse(new == 0, 0, old + new)}
@@ -364,37 +365,43 @@ get_aqys_needing_recal <- function(summed_flags){
 ```
 
 #######################################
-# Recalibrate Data - OZONE
-#######################################
 
+# Recalibrate Data
 ```{r}
-recalibrate_O3 <- function(joined_data_30day, aqys_needing_recal){
+generate_new_gain_and_offset <- function(joined_data_30day, aqys_needing_recal, pollutant){
   
-  O3_params <- filter(joined_data_30day, ID %in% aqys_needing_recal) %>%
+  new_gain_and_offset <- filter(joined_data_30day, ID %in% aqys_needing_recal) %>%
     group_by(ID) %>%
-    summarize(O3.gain = sqrt(var(proxy_rand)/var(O3_raw)),
-              O3.offset = mean(proxy_rand) - O3.gain*mean(O3_raw),
+    summarize(new.gain = sqrt(var(proxy_rand)/var(pollutant_raw)),
+              new.offset = mean(proxy_rand) - new.gain*mean(pollutant_raw),
               .groups = 'drop_last')
   
-  print(as.matrix(O3_params))
+  new_col_names <- switch(pollutant, 
+                          'OZONE'=c('ID', 'O3.gain', 'O3.offset'), 
+                          'NO2'=c('ID', 'NO2.gain', 'NO2.offset'))
+  colnames(new_gain_and_offset) <- new_col_names
+  
+  print(as.matrix(new_gain_and_offset))
 
-  return(O3_params)
+  return(new_gain_and_offset)
   
   }
 ```
 
 ```{r}
-combine_new_and_old_params <- function(new_params, start_time_rolling_72hr){
+combine_new_and_old_params <- function(new_params, pollutant, start_time_rolling_72hr){
   
-  old_params_path_all <- list.files('results', 'OZONE*', full.names = T, recursive = F)
+  old_params_path_all <- list.files('results', paste0(pollutant, '*'), full.names = T, recursive = F)
   old_params_path_newest <- old_params_path_all[length(old_params_path_all)]
   old_params <- read.csv(old_params_path_newest)
   
   aqy_metadata <- select(old_params, c('ID', 'deployment_date', 'deployment_datetime', 'Longitude', 'Latitude', 'proxy_site')) %>%
     unique()
-
+  
+  time_first_flagged <- start_time_rolling_72hr - td_5day
+  
   new_params_metadata <- inner_join(aqy_metadata, new_params, by = 'ID') %>%
-    mutate(start_date = format_timestamp(start_time_rolling_72hr), end_date = '2199-12-31 23:59:59', .after = proxy_site)
+    mutate(start_date = format_timestamp(time_first_flagged), end_date = '2199-12-31 23:59:59', .after = proxy_site)
 
   combined_params <- rbind(old_params, new_params_metadata) %>%
     arrange(ID, start_date) %>%
@@ -403,18 +410,18 @@ combine_new_and_old_params <- function(new_params, start_time_rolling_72hr){
                              format_timestamp(ymd_hms(max(start_date)) - td_hour), 
                              end_date))
 
-  timestamp_for_path <- str_remove_all(format_timestamp(start_time_rolling_72hr), '\\:')
-  new_param_path <- paste0('results/OZONE_calvals_', timestamp_for_path, '.csv')
+  timestamp_for_path <- str_remove_all(format_timestamp(time_first_flagged), '\\:')
+  new_param_path <- paste0('results/', pollutant, '_calvals_', timestamp_for_path, '.csv')
   write.csv(combined_params, new_param_path, row.names = F)
   
-  return(combined_params)
+  return(time_first_flagged)
 }
 ```
 
 ```{r}
-reset_flags_if_recalibrated <- function(){
+reset_flags_if_recalibrated <- function(pollutant){
   
-  all_flags <- read.csv('results/running_flags/running_flags_OZONE.csv')
+  all_flags <- read.csv(paste0('results/running_flags/running_flags_', pollutant, '.csv'))
   
   flags_to_reset <- filter(all_flags, ks >= 120 | gain >= 120 | offset >= 120)
   aqys_to_reset <- unique(flags_to_reset$ID)
@@ -425,24 +432,25 @@ reset_flags_if_recalibrated <- function(){
   updated_flags <- rbind(flags_to_leave, flags_cleared) %>%
     arrange(ID)
   
-  write.csv(updated_flags, 'results/running_flags/running_flags_OZONE.csv', row.names = F)
+  write.csv(updated_flags, paste0('results/running_flags/running_flags_', pollutant, '.csv'), row.names = F)
   
   print('Reset flags - restarting drift detection at zero')
 }
 ```
 
+### Function to Combine Drift Detection and Calibration
 ```{r}
-check_drift_calibrate_data <- function(aqy_data, proxy_data, start_time_rolling_72hr){
+check_drift_calibrate_data <- function(aqy_data, proxy_data, pollutant, start_time_rolling_72hr){
   
-  aqy_data <- calibrate_aqy_data(aqy_data)
+  aqy_data <- calibrate_aqy_data(aqy_data, pollutant)
   
   start_time_recalibration <- as.character(ymd_hms(start_time_rolling_72hr) - td_30day)
   joined_data_72hr <- filter_and_join_data(aqy_data, O3_proxy, start_time_rolling_72hr, td_72hr)
   
-  print(paste('Performing drift detection for', start_time_rolling_72hr))
+  print(paste('Performing drift detection for', start_time_rolling_72hr, 'with', nrow(joined_data_72hr), 'rows of data'))
   
   flags_72hr <- detect_drift(joined_data_72hr)
-  summed_flags <- sum_old_and_new_flags('OZONE', flags_72hr)
+  summed_flags <- sum_old_and_new_flags(pollutant, flags_72hr)
   aqys_needing_recal <- get_aqys_needing_recal(summed_flags)
   
   if(length(aqys_needing_recal) < 1){return(print('No monitors require recalibration for this 72-hr period'))}
@@ -450,17 +458,19 @@ check_drift_calibrate_data <- function(aqy_data, proxy_data, start_time_rolling_
       print('Recalibrating monitors')
   
       joined_data_30day <- filter_and_join_data(aqy_data, O3_proxy, start_time_recalibration, td_30day)
-      new_params <- recalibrate_O3(joined_data_30day, aqys_needing_recal)
-      combined_params <- combine_new_and_old_params(new_params, start_time_rolling_72hr)
+      new_params <- generate_new_gain_and_offset(joined_data_30day, aqys_needing_recal, pollutant)
+      combined_params <- combine_new_and_old_params(new_params, pollutant, start_time_rolling_72hr)
       
-      reset_flags_if_recalibrated()
-    
+      reset_flags_if_recalibrated(pollutant)
+      
       return(combined_params)
     }
 }
 ```
 
 #######################################
+
+
 # Run Everything
 #######################################
 
@@ -469,22 +479,21 @@ O3_proxy <- get_current_proxy_data('OZONE')
 NO2_proxy <- get_current_proxy_data('NO2')
 PM25_proxy <- get_current_proxy_data('PM25')
 
-aqy_data <- read_aqy_data()
+aqy_data <- suppressWarnings(read_aqy_data())
 ```
 
 
-reset_flags('OZONE')
+reset_flags('NO2')
 
 timestamps <- filter(aqy_data, ID %in% c('AQY BB-633', 'AQY BB-642')) %>%
-  pull(timestamp) %>%
+  pull(timestamp_utc) %>%
   unique()
 
 for(timestamp in timestamps){
   
   print(timestamp)
   
-  check_drift_calibrate_data(aqy_data, O3_proxy, format_timestamp(timestamp))
-}
+  check_drift_calibrate_data(aqy_data, O3_proxy, 'NO2', format_timestamp(timestamp))
 
 
 
