--- a/drift-detection-calibration.Rmd
+++ b/drift-detection-calibration.Rmd
@@ -20,11 +20,12 @@ library(stringr)
 
 #Call in Constituent Functions from Other Scripts
 ```{r}
-source('source_scripts/general_purpose_setup.R')
-source('source_scripts/airnow_api_call.R')
-source('source_scripts/read_calibrate_filter_aqy_data.R')
-source('source_scripts/drift_detection.R')
-source('source_scripts/recalibration.R')
+source('source_scripts/a_general_purpose_setup.R')
+source('source_scripts/b_airnow_api_call.R')
+source('source_scripts/c_read_calibrate_filter_aqy_data.R')
+source('source_scripts/d_drift_detection.R')
+source('source_scripts/e_recalibration.R')
+source('source_scripts/f_combine_into_framework.R')
 ```
 
 #######################################
@@ -49,59 +50,21 @@ reset_flags(pollutant)
 
 first.timestamp <- min(aqy.proxy.data$timestamp_pacific)
 
-start.time <- format_timestamp(ymd_hms(first.timestamp) + td.30day)
+look.back.from.time <- format_timestamp(ymd_hms(first.timestamp) + td_30day)
 ```
+
 
 ```{r}
-aqy_proxy_data_72hr <- temporally_filter_data(aqy_proxy_data, start_time, td.72hr)
-
-print(paste('Performing drift detection for', start_time, 'with', nrow(aqy_proxy_data_72hr), 'rows of data'))
-
-new_flags <- get_new_flags(aqy_proxy_data_72hr)
-
-summed_flags <- sum_old_and_new_flags(pollutant, new_flags)
-
-aqys_needing_recal <- get_aqys_needing_recal(summed_flags)
-
-if(length(aqys_needing_recal) < 1){
-    
-      print('No monitors require recalibration for this 72-hr period')
-      
-      new_start_time <- format_timestamp(ymd_hms(start_time) + td.hour)
-      
-      return(list(start_time=new_start_time, full_data=aqy_proxy_data))
-  }else{
-    
-    aqy_proxy_data_30day <- temporally_filter_data(aqy_proxy_data, start_time, td.30day)
-    
-    new_parameters <- generate_new_gain_and_offset(aqy_proxy_data_30day, aqys_needing_recal, pollutant)
-    
-    first_flag <- combine_params_get_first_flag(new_parameters, pollutant, start_time)
-
-    new_start_time <- format_timestamp(ymd_hms(first_flag) + td.hour)
-    
-    reset_flags_if_recalibrated(pollutant)
-    
-    aqy_proxy_data <- calibrate_O3_data(aqy_proxy_data_raw)
-    
-    return(list(start_time=new_start_time, full_data=aqy_proxy_data))
-  }
+while(look.back.from.time < 2021){
   
-```
-
-  else
-  {aqy.proxy.data <- calibrate_O3_data(aqy.proxy.data.raw) %>%
-      calibrate_NO2_data(.)}
-```
-
-while(time_to_check < 2021){
+  my.outputs <- detect_drift_recalibrate_data(aqy.proxy.data, aqy.proxy.data.raw, pollutant, look.back.from.time)
   
-  print(time_to_check)
-  
-  time_to_check <- check_drift_calibrate_data(joined_aqy_proxy_data, 'OZONE', format_timestamp(time_to_check))
+  aqy.proxy.data <- my.outputs$calibrated_data
+  look.back.from.time <- my.outputs$look_back_from_time
   
 }
 ```
+
 
 
 
