--- a/drift-detection-calibration.Rmd
+++ b/drift-detection-calibration.Rmd
@@ -33,16 +33,17 @@ source('source_scripts/f_combine_into_framework.R')
 #######################################
 
 ```{r}
-pollutant <- 'OZONE'
+pollutant <- 'NO2'
 
 proxy.data <- get_current_proxy_data(pollutant)
 
 aqy.data <- suppressWarnings(read_aqy_data())
 
 aqy.proxy.data.raw <- inner_join(aqy.data, proxy.data, by = 'timestamp_pacific') %>%
-  filter(ID %in% c('AQY BB-642'))
+  filter(ID %in% c('AQY BB-642', 'AQY BB-633'))
 
-aqy.proxy.data <- calibrate_O3_data(aqy.proxy.data.raw)
+aqy.proxy.data <- calibrate_O3_data(aqy.proxy.data.raw) %>%
+  calibrate_NO2_data()
 ```
 
 ```{r}
@@ -51,6 +52,7 @@ reset_flags(pollutant)
 first.timestamp <- min(aqy.proxy.data$timestamp_pacific)
 
 look.back.from.time <- format_timestamp(ymd_hms(first.timestamp) + td_30day)
+  
 ```
 
 
